2008-12-18 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c pam/sfcb: 
	[ 2412189 ] More flexible access control with unix socket connections
	(patch by J. Bart Whitely)

2008-12-18 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimXmlRequest.c cimslpCMPI.c classProvider.c classSchema2c.c
	  providerDrv.c sfcbdump.c sfcbdumpP32onI32.c:
	[ 2390515 ] Fix multiple resource leaks in SFCB detected by Coverity
	(patch by John Powell)

2008-12-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* fileRepository.c:
	[ 2316307 ] SFCB segfaults on missing instance file
	(based on patch by Kristi Schettler)
	
2008-12-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* support.h:
	[ 2433594 ] sfcb causing 'unaligned access' errors on IA64
	(patch by Klaus Kampf)

2008-12-12 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimslpSLP.c 
	[ 2390523 ] buffer overrun in cimslpSLP.c
	(patch by John Powell)

2008-12-08 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerDrv.c
	[ 2390100 ] mlogf called with unsafe arguments
	(patch by J. Bart Whitely)

2008-12-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* support.c:
	Fixed [ 2391132 ] Check for empty string in decode64
	(patch by J. Bart Whitely)

2008-11-21 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* classProviderGz.c:
	Fixed [ 2192023 ] sfcb deadlocks on nsHt initialization
	(patch from Klaus Kaempf)

2008-11-21 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* instance.c:
		[ 2021888 ] Bug in creating CIM instance
			Patch from Luong Nguyen-Duy

2008-11-18 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimXmlParser.c cimcClientSfcbLocal.c configure.ac test/Makefile.am 
		test/wbemcli/Makefile.am test/wbmecli/check_errors.pl:
		Fixed [ 2042150 ] Mismatched CMPI error code and error message
			(patch from Tyrel Datwyler)
		Added optional wbemcli test directory

2008-11-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimXmlParser.c test/unittest/xmlUnescape.c 