@@ -1,4 +1,4 @@
-# $Id: sfcb.cfg.pre.in,v 1.14 2008/10/24 15:40:07 mchasal Exp $
+# $Id: sfcb.cfg.pre.in,v 1.15 2008/12/23 05:45:11 mchasal Exp $
 # Sample Configuration for Small Footprint CIM Broker
 httpPort:       5988
 enableHttp:     @SFCB_CONF_HTTP@
@@ -8,6 +8,7 @@ httpsPort:      5989
 enableHttps:    @SFCB_CONF_HTTPS@
 httpsProcs:     8
 provProcs:      32
+maxMsgLen:      10000000
 doBasicAuth:    @SFCB_CONF_DOBASICAUTH@
 doUdsAuth:      true
 basicAuthLib:   @SFCB_CONF_BASICAUTHLIB@
